Rework permission resolution, sync, and profile handling; add Paper adapter and CHANGELOG
- Immutable character-trie permission index with fast lowercase lookup path
- Atomic immutable published user state (model, context, permissions, metadata)
- Split blocking storage work from CPU-heavy permission snapshot rebuilds
- Parallelized loaded-user rebuilds after group changes
- Coalesced repeated sync updates per database poll batch
- Hierarchical permission-node tab completion with typo correction
- Mojang profile resolution/caching for never-joined players
- Native Paper adapter (paper-plugin.yml, BasicCommand) alongside Spigot